# ryanair-telegram-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  flights.py  main.py  pyproject.toml  storage.py
ryanair_tracker/: bot_history.py  buchbinder.py  buchbinder_trackers.py  chats.py  deals.py  flights.py  main.py  notify.py  schedules.py  trackers.py
ryanair_tracker/bot/: app.py  buchbinder_conv.py  common.py  query.py  scheduler_conv.py  server.py  tracker_conv.py  wizard.py
tests/: conftest.py  test_buchbinder.py  test_flights.py  test_format.py  test_history.py  test_schedules.py  test_trackers.py
